--- a/_posts/2016-05-15-kos.md
+++ b/_posts/2016-05-15-kos.md
@@ -10,3 +10,5 @@ So I was in Kos Island, Greece for the last few days. It was fun. The city was m
 We visited a couple of places. Tried Gyros, have been having Chicken Gyros for the last 4 meals. Now we'll move on to Mousaka or something else. We visited a few places like the Castle of Knights, Hippocrates Tree, Ancient Agora and Askelpios. Overall it was a nice quite island, the sea was amazing.
 
 Now we are at Rhodes, we visited Lindos today. More about the two cities along with images later.
+
+![Gyros](/img/gyros.jpg)
