--- a/_drafts/2016-05-21-day-one.md
+++ b/_drafts/2016-05-21-day-one.md
@@ -5,6 +5,8 @@ subtitle: at EIG
 tags: [endurance, internship, mumbai]
 ---
 
-So today was the first day at EIG. In hindsight I shouldn't have joined today. I haven slept in the last 30 hours.
+So today was the first day at EIG. In hindsight I shouldn't have joined today. I haven slept in the last 30 hours. Induction was a long process. Went on for two days.
 
-Is Github MEssed up?
+I finally setup the environment on day 3. It is all Java. The bad news is I don't like the language, the good news is I'll learn to work on a strongly typed language finally. God I miss python :(.
+
+**1st June 2016**: Integrated my first gateway PayUMoney. Testing left.
