--- a/_posts/2016-07-02-trump-cat.md
+++ b/_posts/2016-07-02-trump-cat.md
@@ -2,21 +2,21 @@
 layout: post
 title: TrumpCat
 subtitle: lets take Trump off the Internet
-tags: [bots, programming, ai]
-fb-img: http://gyani.net/img/blog/dinnerbot1.png
+tags: [chrome, programming, extensions]
+fb-img: http://gyani.net/img/blog/trump.png
 ---
 
 After being inspired by Drumpfinator and being disgusted by Donald Trump, I decided to build an extension that replaces images of Donald Trump with Cats
 
-#TrumpCat 1.0
+##TrumpCat 1.0
 
 TrumpCat 1.0 used two APIs, [PlaceKitten](https://placekitten.com) and **AlchemyVision**. Whenever a page loaded the extension would go through images on the page, the extension
-attached a MutationObserver to the page to take care of new images. The problem with AlchemyVision was that it only offered 150 calls a day. So I decided to get use an inhouse classifier.
+attached a MutationObserver to the page to take care of new images. The problem with AlchemyVision was that it only offered 150 calls a day. So I decided to get use an in-house classifier.
 
 
-#TrumpCat 1.5
+##TrumpCat 1.5
 
-The current TrumpCat uses a classifier written by my friend[**@shubh24**](https://shubh24.github.io). It works great but is a bit intense on my tiny EC2 instance so
+The current TrumpCat uses a classifier written by my friend [**@shubh24**](https://shubh24.github.io). It works great but is a bit intense on my tiny EC2 instance so
 the server at times returns a 500 response. Rest of the API is also a hack and so
 can't expect anything better.
 
