spelling mistakes fixed

--- a/_posts/2016-07-03-Greece-2016.md
+++ b/_posts/2016-07-03-Greece-2016.md
@@ -2,10 +2,10 @@
 layout: post
 title: Greece
 subtitle: ...reality
-tags: [greece, travel, europe]
+tags: [Greece, travel, Europe]
 ---
 
-The Greece Trip was greaty. The travel expectaion vs reality pictures that I had seen before the trip were depressing.
+The Greece Trip was great. The travel expectation vs reality pictures that I had seen before the trip were depressing.
 The reality was much better and way closer to expectations. Greece is full of cats.
 
 ## Dubai
