--- a/_posts/2016-07-02-greece.md
+++ b/_posts/2016-07-02-greece.md
@@ -3,6 +3,8 @@ layout: post
 title: Greece
 subtitle: ...reality
 tags: [Greece, travel, Europe]
+fb-img: http://gyani.net/img/blog/sunset.jpg
+
 ---
 
 The Greece Trip was great. The travel expectation vs reality pictures that I had seen before the trip were depressing.
