--- a/_posts/2016-07-02-greece.md
+++ b/_posts/2016-07-02-greece.md
@@ -3,7 +3,7 @@ layout: post
 title: Greece
 subtitle: ...reality
 tags: [Greece, travel, Europe]
-fb-img: http://gyani.net/img/blog/sunset.jpg
+fb-img: https://gyani.net/img/blog/sunset.jpg
 
 ---
 
