--- a/_posts/2016-07-09-toptal.md
+++ b/_posts/2016-07-09-toptal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Toptal
-subtitle: ...putting my foot into freelancing
+subtitle: ...stepping into freelancing
 tags: [freelancing, travel, programming]
 ---
 
@@ -12,7 +12,7 @@ One of my goals for the year was to set up a freelancing profile. This would hel
 - Financial Independence
 - Location Independence
 
-![Krabi Sea Facing](/img/seafacing.jpg)
+![Krabi Sea Facing](/img/blog/seafacing.jpg)
 
 One of the things I dream of is to freelance while moving around the world for a few years after graduation at least. This dream is partially inspired by [Gary Vaynerchuck's video](https://www.youtube.com/watch?v=RBXZlYdiizk).
 
