--- a/_posts/2016-07-09-toptal.md
+++ b/_posts/2016-07-09-toptal.md
@@ -5,7 +5,7 @@ subtitle: ...stepping into freelancing
 tags: [freelancing, travel, programming]
 ---
 
-So I applied to **TopTal** today. TopTal promisses to get great clients to great freelancers. I have never freelanced earlier but I have good programming experience. If you have ever read this blog earlier you know that the blog is about two things programming and traveling.
+So I applied to the **TopTal** Web developers group today. TopTal promisses to get great clients to great freelancers. I have never freelanced earlier but I have good programming experience. If you have ever read this blog earlier you know that the blog is about two things programming and traveling.
 
 One of my goals for the year was to set up a freelancing profile. This would help me achieve two important things
 
@@ -13,6 +13,8 @@ One of my goals for the year was to set up a freelancing profile. This would hel
 - Location Independence
 
 ![Krabi Sea Facing](/img/blog/seafacing.jpg)
+
+This is one of the best views I could find on Google Images. I don't need it to be this fancy.
 
 One of the things I dream of is to freelance while moving around the world for a few years after graduation at least. This dream is partially inspired by [Gary Vaynerchuck's video](https://www.youtube.com/watch?v=RBXZlYdiizk).
 
