--- a/_posts/2016-12-25-bring-it-on-2017.md
+++ b/_posts/2016-12-25-bring-it-on-2017.md
@@ -16,7 +16,7 @@ A big part of the speech comes from Steve Jobs, Rocky Balboa, Any Given Sunday, 
 
 So I visited Khajuraho recently and on the way I stopped at Jhansi.In front of someones office I found this.
 
-![Mediocrity][/img/blog/mediocrity.jpg]
+![Mediocrity](/img/blog/mediocrity.jpg)
 
 This sums up my plan for 2017. I'm trying to get off the path to mediocrity and on the path towards greatness. As Gary V says in his [video](https://www.youtube.com/watch?v=RBXZlYdiizk), the age 22 is the greatest time in anyones life.
 
