--- a/_posts/2016-12-25-bring-it-on-2017.md
+++ b/_posts/2016-12-25-bring-it-on-2017.md
@@ -10,9 +10,9 @@ I thought I wouldn't write this but I just saw a great post by [@shubh24](http:/
 
 Unlike his post this post has no recaps. If you want a re-cap, read my blog. See my videos. Go through my GitHub.
 
-This post talks about what was not done instead. The inspiration for this post came after my sister handed me the final speech I gave as Head Boy of Army Public School Pune. You can find the speec [here](/files/speech.pdf).
+This post talks about what was not done instead. The inspiration for this post came after my sister handed me the final speech I gave as Head Boy of Army Public School Pune. You can find the speech [here](/files/speech.pdf).
 
-A big part of the speech comes from Steve Jobs, Rocky Balboa, Any Given Sunday, Confucious and others. Why reinvent the wheel right?
+A big part of the speech comes from Steve Jobs, Rocky Balboa, Any Given Sunday, Confucius and others. Why reinvent the wheel right?
 
 So I visited Khajuraho recently and on the way I stopped at Jhansi.In front of someones office I found this.
 
