--- a/_posts/2016-12-25-bring-it-on-2017.md
+++ b/_posts/2016-12-25-bring-it-on-2017.md
@@ -43,6 +43,6 @@ Don't settle, Do more is the mantra for 2017. I've listed out a few things that 
 
 Regarding making something beautiful, if you are a font end developer and want to work on a project(or many projects) do [mail](mailto:anomaly.the@gmail.com) me. I get back ends running but some projects never materialize because of my terrible CSS and front end skills.
 
-I had made a list earlier called Goals. Again I'll not mention what was done rather I'll mention what wasn't done. I've wanted to do bug bounties for a while now. I plan on starting off and getting good with Bug Bounties in 2017. It ties into my love of web security and goal of living and working remotely. I thought I would have a product with a good user base with @psdh and @shubh24 by the end of last semester but that didn't happen. Let's see when that happens, no rush.
+I had made a list earlier called Goals. Again I'll not mention what was done rather I'll mention what wasn't done. I've wanted to do bug bounties for a while now. I plan on starting off and getting good with Bug Bounties in 2017. It ties into my love of web security and goal of living and working remotely. I thought I would have a product with a good user base with [@psdh](https://psdh.github.io) and [@shubh24](http://shubhankar.xyz) by the end of last semester but that didn't happen. Let's see when that happens, no rush.
 
 Bring it on 2017. Bring it on life.
