added missing the

--- a/_posts/2017-07-10-growth.md
+++ b/_posts/2017-07-10-growth.md
@@ -36,7 +36,7 @@ The coach gave us a brilliant definition of growth
 
 >>Growth is making better decisions with decreasing amount of information
 
-[Rajnish](https://blog.gojekengineering.com/@rajnish.dashora) rephrased what coach said
+[Rajnish](https://blog.gojekengineering.com/@rajnish.dashora) rephrased what the coach said
 
 >>Growth is making better decisions in the face of uncertainty
 
