corrected venn diagram image link

--- a/_posts/2017-07-10-growth.md
+++ b/_posts/2017-07-10-growth.md
@@ -44,7 +44,7 @@ The coach gave us a brilliant definition of growth
 
 Rajnish also talks about what he calls the *Circle of Uncertainty*. The space between the Inner Circle and the Outer Circle is the [Goldilocks Zone](https://en.wikipedia.org/wiki/Circumstellar_habitable_zone). His theory is, the more time we spend in the Goldilocks Zone, the more the outer circle expands. Which roughly translates us to handling uncertainties better and taking bigger risks. Outside the outer circle there is nothing but stress.
 
-![Circle of Uncertainty](/img/blog/peter.gif)
+![Circle of Uncertainty](/img/blog/venn.jpg)
 
 Earlier in the day the coach was talking about how life is essentially a very big decision tree and how as humans we are predisposed to prune parts of the decision leaving only a single path. Most of this pruning he said is done based on our biases and unconscious choices, we don't think of it much or pick a path that looks the easiest. Only to go down the path and hit a dead end.
 
