--- a/_posts/2017-07-10-growth.md
+++ b/_posts/2017-07-10-growth.md
@@ -12,11 +12,11 @@ Day 4 of the boot-camp ended today. The session ended with the answer to the que
 
 *Growing up* we have been told on multiple occasions by parents, friends, teachers and other well wishers that we should do X because doing X will lead to growth. It can come in multiple forms
 
-- Do PCM in XIth grade, there is a lot of growth in that are
-- Do Computer Science or IT, you can grow fast
+- Do PCM in XIth grade, there is a lot of growth in that area
+- Do Computer Science you will start well, might grow slow though
 - If you are in any of the core-engineering fields you will grow much more than a typical CSE graduate. The sky is the limit.
 - Grow up! You aren't a kid any more
-- Join a startup you'll grow faster those who join a big company
+- Join a startup you'll grow faster than those who join a big company
 
 So what is growth? I'll give you thirty seconds to define it. It's funny that we spend so little time defining these things.
 
@@ -24,7 +24,7 @@ So what is growth? I'll give you thirty seconds to define it. It's funny that we
 
 What definitions did you come up with?
 
-- Growth is related to learning if I know more than I knew yesterday that meant I grew a little
+- Growth is related to learning, if I know more than I knew yesterday that means I grew a little
 - Growth is related to finance, if I am earning more than I did a couple of months ago, I am growing
 - Growth is related to hierarchy, give me that damn promotion
 - Growth means achieving what the society considers desirable
@@ -36,7 +36,7 @@ The coach gave us a brilliant definition of growth
 
 >>Growth is making better decisions with decreasing amount of information
 
-[Rajnish](https://blog.gojekengineering.com/@rajnish.dashora) rephrased what the coach said
+[Rajnish](https://www.linkedin.com/in/rajnish-dashora-89470242) rephrased what the coach said
 
 >>Growth is making better decisions in the face of uncertainty
 
@@ -58,7 +58,7 @@ This can be related to uncertainty. How many of us have that friend or relative 
 
 A lot of us are guilty of being in the above camp. Our education system and upbringing expects us to be extraordinary while going down the most average path possible. Our actions don't match our ambitions.
 
-Maybe if we spend more time in the *Circle of Uncertainty* we can break the routine and do some of the above things.
+Maybe if we spend more time in the *Circle of Uncertainty* we can *grow* and eventually break the routine and do some of the above things.
 
 ![Gary Vaynerchuck Do It](/img/blog/gary.gif)
 
