peter can use some bike shedding

--- a/_posts/2017-07-10-growth.md
+++ b/_posts/2017-07-10-growth.md
@@ -42,6 +42,8 @@ The coach gave us a brilliant definition of growth
 
 ![Peter making decisions](/img/blog/peter.gif)
 
+Peter could honestly use some *[bike shedding](https://shed.bike)*.
+
 Rajnish also talks about what he calls the *Circle of Uncertainty*. The space between the Inner Circle and the Outer Circle is the [Goldilocks Zone](https://en.wikipedia.org/wiki/Circumstellar_habitable_zone). His theory is, the more time we spend in the Goldilocks Zone, the more the outer circle expands. Which roughly translates us to handling uncertainties better and taking bigger risks. Outside the outer circle there is nothing but stress.
 
 ![Circle of Uncertainty](/img/blog/venn.jpg)
