--- a/_posts/2017-09-03-musings.md
+++ b/_posts/2017-09-03-musings.md
@@ -65,7 +65,8 @@ In Shillong we made a trip to two beautiful Cafes.
 
 Also visited the Elephant Falls, a personal favorite of Mr. Prime Minister.
 
-![Tweet]
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Scenic Elephant Falls…when you go to Meghalaya, this has to be on your ‘must visit’ list. <a href="https://twitter.com/hashtag/IncredibleIndia?src=hash">#IncredibleIndia</a> <a href="https://t.co/cnLDLvtagh">pic.twitter.com/cnLDLvtagh</a></p>&mdash; Narendra Modi (@narendramodi) <a href="https://twitter.com/narendramodi/status/736489085024358400">May 28, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ![Elephant Falls](/img/blog/north-east/elephant.jpg)
 
