updated sub heading

--- a/_posts/2017-09-11-london.md
+++ b/_posts/2017-09-11-london.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: London
-subtitle: .. pardon my absence
+subtitle: .. or my struggle to get here
 tags: [london, bloomberg]
 ---
 
