Note about Ebiten

--- a/_posts/2018-05-16-chip-8.md
+++ b/_posts/2018-05-16-chip-8.md
@@ -29,7 +29,7 @@ for a different time.
 
 ![Pokemon!](https://media.giphy.com/media/hytaU39LuyfS0/giphy.gif)
 
-I eventually bought a Playstation 1, my computer was too slow to emulate it then. I think I had a computer running Intel Pentium 4
+I eventually bought a Playstation 2, my computer was too slow to emulate it then. I think I had a computer running Intel Pentium 4
 at 1.6 Ghz and I got terrible frame rates with the PCSX2 emulator. In University I tried PCSX2 again as my PS2 wasn't working
 and I really wanted to play Downhill Domination.
 
@@ -87,6 +87,8 @@ I had a chat with a friend who pointed out some resources to improve your Golang
 - [Effective Go](https://golang.org/doc/effective_go.html)
 
 I haven't found time to read any of this yet, I hope to soon.
+
+Update: For graphics/keyboard/sound I am using this library called [Ebiten](https://github.com/hajimehoshi/ebiten). I just had a pull request from the author of the library helping improve the performance of the emulaotr.
 
 # Is the emulation perfect?
 
