fixed image link

--- a/_posts/2019-07-13-its-here.md
+++ b/_posts/2019-07-13-its-here.md
@@ -8,7 +8,7 @@ fb-img: https://gyani.net/img/blog/mac.jpg
 
 I finally got my own MacBook!
 
-!Macbook Pro 2019](https://gyani.net/img/blog/mac.jpg)
+![Macbook Pro 2019](https://gyani.net/img/blog/mac.jpg)
 
 I have been tinkering with the idea of getting my own MacBook Pro for a long time. Going back to early 2015. I would tell my self
 that I'd get a MacBook Pro if I get into and clear Google Summer of Code. After Google Summer of Code got over I thought it's quite
