--- a/_posts/2020-01-31-february-2020.md
+++ b/_posts/2020-01-31-february-2020.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: February 2020
-subtitle: .. beating the instant gratificaiton monkey
+subtitle: .. beating the instant gratification monkey
 tags: [fitness, life, procrastination]
 fb-img: https://gyani.net/img/blog/monkey.png
 ---
