--- a/_posts/2020-01-31-february-2020.md
+++ b/_posts/2020-01-31-february-2020.md
@@ -59,21 +59,21 @@ In this list I'll try to go through my blog posts and find previous blog posts w
 10. [I claim I'll not dirnk Soda for an year. I give up in month 4](https://gyani.net/blog/3-months-in-singapore/)
 11. [I want to release a prodcut, doesn't happen](https://gyani.net/blog/3-months-in-singapore/)
 12. [I want to visit Bali, doesn't happen. I hardly fail travel goals though. Usually exceed expectations](https://gyani.net/blog/3-months-in-singapore/)
-13. [I want to learn the Harmonica, can't play a chort](https://gyani.net/blog/3-months-in-singapore/)
+13. [I want to learn the Harmonica, can't play a chord](https://gyani.net/blog/3-months-in-singapore/)
 14. [I claim I'll run daily. Can't even run all day in January.](https://gyani.net/blog/bring-it-on-2017/)
 15. [I claim I'll vlog daily. Cause GaryV. Oh, that was stupid. Not sad that didn't happen](https://gyani.net/blog/bring-it-on-2017/)
 16. [I want to **Master Web Security**. In an year? Yes I was naive. Didn't happen](https://gyani.net/blog/bring-it-on-2017/)
-17. [I want to learn Full Stack Dev. Same year as above. Still suck at frontend](https://gyani.net/blog/bring-it-on-2017/)
+17. [I want to learn Full Stack Dev. Same year as above. Still suck at front-end](https://gyani.net/blog/bring-it-on-2017/)
 18. [I want to run half a marathon in 2017. I do run one, but in November 2019.](https://gyani.net/blog/bring-it-on-2017/)
-19. [I want to learn functional programming. I can't do any haskell still](https://gyani.net/blog/bring-it-on-2017/)
+19. [I want to learn functional programming. I can't do any Haskell still](https://gyani.net/blog/bring-it-on-2017/)
 20. [Write a blogpost about seeking location independence on July 9, 2016. No progress](https://gyani.net/blog/toptal/)
 
 
-I was really really naive in 2017 it seems. I wanted to "Master Web Security", "Learn Full Stack Dev" and "Learn Funcitonal Programming", "Make a beautifl product" along with a bunch of non-programming goals.
+I was really really naive in 2017 it seems. I wanted to "Master Web Security", "Learn Full Stack Dev" and "Learn Functional Programming", "Make a beautiful product" along with a bunch of non-programming goals.
 
 I seem to love the word "hopefully" and "plan to". Hope doesn't work if you don't.
 
-And that's just what I found on this blog. Never mind, random conversations, whatsapp messages and claims on the podcast. In hindsight a lot of these
+And that's just what I found on this blog. Never mind, random conversations, WhatsApp messages and claims on the podcast. In hindsight a lot of these
 goals weren't [SMART](https://www.mindtools.com/pages/article/smart-goals.htm).
 
 
@@ -99,7 +99,7 @@ I fly a lot. Environmentalists reading this post will probably not be happy read
 Colombia and cities within, Georgia, Romania, Brazil, Peru, Chile, Argentina, Germany and Kuwait. Given this long self deprecating rant I do deserve bragging about my travels. I hardly post about this on social media. Not proud of my
 carbon footprint though.
 
-Anywho, why is this relevant?
+Any who, why is this relevant?
 
 Every time I'm on my way back to Abu Dhabi, I am dreamy. I think about how life is going to change. How I'll start waking up on time, how I will stop eating crap, how I will start working out and how I will start working on side projects and
 life goals. I get out of the airport, get home and order some junk. Eat it. All the planning goes south, hell I've just arrived from a trip. Let me get adjusted. Does this happen with you as well?
@@ -113,7 +113,7 @@ I was interning at Directi Mumbai in June 2016. I remember a conversation with a
 and I should continue doing this. He said "most of us just go home, drink a two beers with friends and sleep". I'm that person now excluding the daily drinking. I remember how I'd see peoples now empty profiles on Github after they had started working
 and be like, these people just got into the field for money and never actually love programming. Now, my Github profile is almost empty. The number of green squares can be counted on your fingers.
 
-How wrong was I? I love to programmed. Always have. I love how I could write a few lines of code and build a product. With the internet I can ship this product to everyone in the world at the speed of light. Very few other pursuit allows such resource
+How wrong was I? I love to programmed. Always have. I love how I could write a few lines of code and build a product. With the Internet I can ship this product to everyone in the world at the speed of light. Very few other pursuit allows such resource
 little creativity that ships so fast. You can't ship sculptures and you need new raw material to make them. As a doctor you can't operate on a patient a continent away. As a mechanical engineer you just can't as easily build a car, it's heavy on resources.
 
 I think what happens is that the instant gratification monkey starts winning faster as you have a stable income assuming you keep it in check during work. This reminds me of a quote by NNT.
@@ -129,16 +129,16 @@ Recently I have been classifying problems into two categories.
 2. Hard - This is really tough to pursue alone. Not worth doing.
 
 Finding the "medium level" problem has been an excuse. This mythical "medium level problem" is something that's interesting, challenging, rewarding
-and worth doing. Probably lots of my ideas have been medium level but have been incorrectly labelled "hard" or "easy". Yesterday I realized to counter this polarization, if I think something
+and worth doing. Probably lots of my ideas have been medium level but have been incorrectly labeled "hard" or "easy". Yesterday I realized to counter this polarization, if I think something
 is easy I should add it with other similar things till it proves to be "medium". If I think something is "hard" then I should break it down till I label it as "medium" and then work on the medium.
 
-The other excuse for not starting a startup has been the lack of a co-founder. There aren't enough hackathons/meetups here to meet people who'd want to start a company. That's probably an excuse, I
+The other excuse for not starting a startup has been the lack of a co-founder. There aren't enough Hackathons/Meetups here to meet people who'd want to start a company. That's probably an excuse, I
 could definitely drive to Dubai. Or even easier, reach out to people on-line. If you are looking for a co-founder, reach out.
 
 
 ### Resistance wins
 
-There's a great book by Steven Pressfield called the "War of Art". He says the blocker behind every creative endeavour is a universal force called "Resistance". It gets stronger as you move closer to your goal. Anywho, let's look at a random weekend plan
+There's a great book by Steven Pressfield called the "War of Art". He says the blocker behind every creative endeavor is a universal force called "Resistance". It gets stronger as you move closer to your goal. Anywho, let's look at a random weekend plan
 in order of priority :-
 
 1. Work on a side project
@@ -202,7 +202,7 @@ yet though.
 
 Ok this brings me to some monthly goals with rewards/punishments
 
-1. Running : As said, I want to run 1000km over an year. Given I have only run 23.80 so far I currently need to run about 2.914 km per day. That means in February I need to run 84.56 km. How do I do this? I'll be doing 10 km on Saturdays and at least 5 km on Fridays. On
+1. Running : As said, I want to run 1000 km over an year. Given I have only run 23.80 so far I currently need to run about 2.914 km per day. That means in February I need to run 84.56 km. How do I do this? I'll be doing 10 km on Saturdays and at least 5 km on Fridays. On
 other days I'll try to hit the daily minimum. Win: I get a pair of sports headphones so that I can listen to music while I run. Lose: I done £50 to a charity around Diabetes, especially Type-2 cause thats where I'm headed.
 
 2. Weight: Lose 3 kg. Win: I'll be eligible for a fitness watch if I run the required kilometers in March. Otherwise this gets pushed till I get to 70 kg and run required distance for the month after. Loss: £50 to a charity around fighting Diabetes, especially Type-2 cause that's where I'm headed. More on How later.
@@ -222,7 +222,7 @@ If I fail the side project goal, reach out with the name of a good open source p
 
 I spoke about them on a podcast we did before the end of the year. From what I remember :-
 
-1. 1000kms running - Being tracked!
+1. 1000 km running - Being tracked!
 2. Full Marathon & Two Halves - No progress
 3. Regular boxing classes - Have signed up and haven't missed a class since
 4. Build a Product - Tracking. Measure: HackerNews/Product Hunt releases. Better Measure: Revenue / User counts?
