more typo fixes

--- a/_posts/2020-01-31-february-2020.md
+++ b/_posts/2020-01-31-february-2020.md
@@ -53,11 +53,11 @@ In this list I'll try to go through my blog posts and find previous blog posts w
 4. [I claim I'll learn how to play the guitar. Enough guitar to at least play thunder struck. Can't play a chord still](https://gyani.net/blog/distributed-systems/)
 5. [I hope that I'll take RouteRush forward with better UI/UX and I do nothing](https://gyani.net/blog/planning-travel/) 
 6. [I plan on writing an MSX2 emulator in September 2017. I end up writing a CHIP-8(way easier) emulator in June 2018](https://gyani.net/blog/musings/)
-7. [I write a post about how we have only 1500 good weekends in life and end up wasting a lot of subseqeuent weekends](https://gyani.net/blog/and-another-weekend-goes-by/)
+7. [I write a post about how we have only 1500 good weekends in life and end up wasting a lot of subsequent weekends](https://gyani.net/blog/and-another-weekend-goes-by/)
 8. [I write a post about how I plan on reading go-jeks reading list in 600 days if not 6 months. It's been 904 days and I have read 11/38 books](https://gyani.net/blog/and-another-weekend-goes-by/)
 9. [I plan on doing an open mic in Singapore during my time there. It's been 3 years. No open mic](https://gyani.net/blog/3-months-in-singapore/)
-10. [I claim I'll not dirnk Soda for an year. I give up in month 4](https://gyani.net/blog/3-months-in-singapore/)
-11. [I want to release a prodcut, doesn't happen](https://gyani.net/blog/3-months-in-singapore/)
+10. [I claim I'll not drink Soda for an year. I give up in month 4](https://gyani.net/blog/3-months-in-singapore/)
+11. [I want to release a product, doesn't happen](https://gyani.net/blog/3-months-in-singapore/)
 12. [I want to visit Bali, doesn't happen. I hardly fail travel goals though. Usually exceed expectations](https://gyani.net/blog/3-months-in-singapore/)
 13. [I want to learn the Harmonica, can't play a chord](https://gyani.net/blog/3-months-in-singapore/)
 14. [I claim I'll run daily. Can't even run all day in January.](https://gyani.net/blog/bring-it-on-2017/)
