--- a/_posts/2020-01-31-february-2020.md
+++ b/_posts/2020-01-31-february-2020.md
@@ -9,8 +9,8 @@ fb-img: https://gyani.net/img/blog/monkey.png
 **BLUF: Fun Long Ranty Self Deprecating Post. Yes, it has pictures**
 
 
-The instant gratification monkey has been winning for a very very long time now. I've been failing to do things that don't have any explicit dealdines. The only deadline
-is death. If you don't know what the instant gratification monkey is, watch this video and then come back to this [blog](https://www.youtube.com/watch?v=arj7oStGLkU).
+The instant gratification monkey has been winning for a very very long time now. I've been failing to do things that don't have any explicit deadlines. The only deadline
+is death. If you don't know what the instant gratification monkey is, watch this [video]((https://www.youtube.com/watch?v=arj7oStGLkU)) and then come back to this blog..
 
 ## Where has the instant gratification monkey been beating me?
 
