--- a/_posts/2020-01-31-february-2020.md
+++ b/_posts/2020-01-31-february-2020.md
@@ -212,6 +212,9 @@ other days I'll try to hit the daily minimum. Win: I get a pair of sports headph
 4. Side project - Build and ship a product on HN. Thinking of working on a podcast collaboration market place with Bhavdeep. Calling it IndieHackers for podcasters. If you wan to get involved reach out. Measure: V1 should allow you to list yourself and find guests based on interests. Win: I qualify
 for getting a new phone when I hit 70 kg. Lose: Netflix ban. That takes a lot of my time. I'll also donate £50 to an open source project or a coding community.
 
+
+About weight: I'll be trying Intermittent fasting along with calorie counting for the month of February. Will eat between 2 pm and 10 pm. Will try different diets for a few months and write about them. 
+
 Will be posting reflections and goals for the next month at the end of every month. Or I "hope to". Follow this [sheet](https://docs.google.com/spreadsheets/d/1F9tNhLqFucJYI8k_E6RKWnmQGYYbL7yzykx9oZAOV5c/edit?usp=sharing) for tracking my weight, exercise and diet progress. If I do fail reach out
 with the name of a charity you like and I'll make a donation. If you are a runner and are raising money then even better.
 
