fixed another typo

--- a/_posts/2020-01-31-february-2020.md
+++ b/_posts/2020-01-31-february-2020.md
@@ -40,7 +40,7 @@ and they didn't make money"*. Hell no, I didn't ship anything. Nothing at all. I
 ### Relationship Goals
 
 This year I have talked less with people than any past year. I don't have any metrics but I just feel this way. I call home every now and then, it's been a long while since I have talked to my grandmothers. The clock is ticking, I have a Saturday reminder
-to call my grand mothers. It's been more than I month since I made a call. I'm probably talking to them once in three months at best. What the heck is going on?
+to call my grand mothers. It's been more than a month since I made a call. I'm probably talking to them once in three months at best. What the heck is going on?
 
 
 ## Proof of Past Failures
