--- a/_posts/2020-01-31-february-2020.md
+++ b/_posts/2020-01-31-february-2020.md
@@ -18,7 +18,7 @@ is death. If you don't know what the instant gratification monkey is, watch this
 
 I'm **75.95 kg** as of the time of writing. I have been thinking about losing weight for years but it's just been going up and up 📈. I'm a short fellow, with that weight my
 BMI is **28.95** which means I'm overweight. According to the NHS because of my ethnicity if I'm above 27.5 I'm at a *high risk of health problems like type 2 diabetes*. I need
-to get to **66.4 kg** to get to have a healthy BMI of **25**. I need to go further down to **63.5 kg** to be healthy for my ethnicity and have BMI of **23**. Otherwise I'm at an *increased risk of heart attack*.
+to get to **66.4 kg** to get to have a healthy BMI of **25**. I need to go further down to **63.5 kg** to be healthy for my ethnicity and have BMI of **23**. Otherwise I'm at an *increased risk of diabetes*.
 
 I've created *MyFitnessPal* accounts and running regiments multiple times and I have failed. Things look good and I quit. I do nothing I quit. I have a daily reminder at 8 a.m to meditate and run, I do nothing.
 What the heck is going on?
