--- a/_posts/2020-02-29-marchy-2020.md
+++ b/_posts/2020-02-29-marchy-2020.md
@@ -11,14 +11,14 @@ fb-img: https://gyani.net/img/blog/monkey.png
 [post](https://gyani.net/blog/february-2020/)
 
 
-1. **Running** Run 84.56 km. I'm done with 123 km. I'll be doing 10 more today, resulting in 133 km in this month. It's been good running wise. I have bought a pair of Airpods Pro as a reward. :white_check_mark:
+1. **Running** Run 84.56 km. I'm done with 123 km. I'll be doing 10 more today, resulting in 133 km in this month. It's been good running wise. I have bought a pair of Airpods Pro as a reward. ✅ 
 
-2. **Weight** I need to lose 3 kg. I lost 4.40 kg. Really happy about this. This means I qualify for Apple watch if I do the required miles for March. :white_check_mark:
+2. **Weight** I need to lose 3 kg. I lost 4.40 kg. Really happy about this. This means I qualify for Apple watch if I do the required miles for March. ✅
 
-3. **Reading** I said I'd finish The Dark Forest and start reading the next part. This has been a failure. I didn't fly at all so didn't get enough reading time. I only got to 60% of the book. There was no win or loss function associated with this. :x:
+3. **Reading** I said I'd finish The Dark Forest and start reading the next part. This has been a failure. I didn't fly at all so didn't get enough reading time. I only got to 60% of the book. There was no win or loss function associated with this. ❌
 
 4. **Side project** I said I'd ship a product. The back-end for the mentioned features are in, front end is on its way. Release has not been made. This is failure, no Netflix for March. I was trying to find a good universal charity, I picked Khan Academy. As a Khan Academy student
-in the past I felt I should donate. Donated $64.11 which was equivalent to £50 on the 28th of February. :x:
+in the past I felt I should donate. Donated $64.11 which was equivalent to £50 on the 28th of February. ❌
 
 ![proof](/img/blog/khan-academy.png)
 
