--- a/_posts/2020-03-31-april.md
+++ b/_posts/2020-03-31-april.md
@@ -22,7 +22,7 @@ stores open up again.
 
 I'm lucky enough to work remotely and have savings. I made a donation to "Give India". You can find the link to this charity in our side project above!
 
-![proof](/img/blog/give-india.png)
+![proof](/img/give-india.png)
 
 ## April
 
