--- a/_posts/2020-03-31-april.md
+++ b/_posts/2020-03-31-april.md
@@ -36,6 +36,10 @@ Corona posses uncertainity. Lots of time gets spent looking at the spread of the
 
 4. **Side Project** This is the tough one. I'm not sure how to measure this apart. Is a month enough time to build something useful? Will I keep building month long projects? To be fair I haven't released a month long project yet. So I'll scope out a month long project and if that works, next month I can add features to it. I spent a while thinkging about an idea that I could commit to, nothing came up. I'll post an idea on the blog tomorrow otherwise I'll be happy making a gameboy emulator that can barely run Pokemon red.
 
+**Update**:
+
+I like Circle CI as a product, will be building my own CI.
+
 
 ## General
 
