--- a/_posts/2020-03-31-april.md
+++ b/_posts/2020-03-31-april.md
@@ -28,7 +28,7 @@ I'm lucky enough to work remotely and have savings. I made a donation to "Give I
 
 Corona posses uncertainity. Lots of time gets spent looking at the spread of the virus, the affect on stock markets and speaking with family & friends. A lot of time gets spent at home and for the past week I haven't been diligent with IF.
 
-1. **Running** Abu Dhabi is supposed to lift of curfew in a week. I need to run 87.42 km this month minimum. I think I can still go running if its before 8 pm or after 6 am. If that's true I'd like to run 4 km a day, 8 km on Friday and 8 km on Saturday. Every second saturday I'll run 12 km. If that works out then I'll have run 160 km. If I can't go running then I'll do an online work out. No prices for minimum, if I don't achieve the minimum I donate to a diabetes/food charity.
+1. **Running** Abu Dhabi is supposed to lift of curfew in a week. I need to run 87.42 km this month minimum. I think I can still go running if its before 8 pm or after 6 am. If that's true I'd like to run 4 km a day, 8 km on Friday and 8 km on Saturday. Every second saturday I'll run 12 km. If that works out then I'll have run 160 km. If I can't go running then I'll do an online work out. No prizes for minimum, if I don't achieve the minimum I donate to a diabetes/food charity.
 
 2. **Weight** I think I need to be ambitious here. With the quarantine it's rather easy to sit at home and do nothing. Rather sit and home and just keep eating. I'm currently at 69.25. At the end of the month I'd like to be under 66.5. Same, if I lose I donate to charity if I win I get a smart weighing machine. That will make metrics easier.
 
@@ -45,4 +45,4 @@ I like Circle CI as a product, will be building my own CI.
 
 Haven't been boxing in two or three weeks now cause of the virus. How are you folks holding up?
 
-I had a mechanical keyboard in my cart but that's double the price now. Anyone actually doing better during Corona than before?
+Anyone actually doing better during Corona than before?
